[B]4.5.2[/B]
-Fix journaal channels
-Remove cancelled channels

[B]4.5.1[/B]
-Add visual radio channels
-Enable subtitle streams
-Add event channels

[B]4.4.1 - Helix[/B]
-Fix token following site change
-Add visual radio channels

[B]4.2.3 - Gotham[/B]
-Fix token requirement following site change

[B]4.2.2 - Gotham[/B]
-Fix missing dep beautifulsoup

[B]4.2.1 - Gotham[/B]
-Fix livestream referrer

[B]4.1.0 - Gotham[/B]
-Reworked additional channels

[B]4.0.0 - Frodo[/B]
-substantial changes due to website alterations
-additional channels

[B]3.0.0 - Frodo[/B]
-Frodo compatible
-Changelog format
-Additional channel package - laatste journaal, laatste achtuurjournaal, jeugdjournaal
-Fanart added
-Cleanup

[B]2.1.5[/B]
-Required changes due to cancelled channels
-Required fixes due to altered website

[B]2.1.4[/B]
-Channels - Disable Laatste Achtuurjournaal
-Set language
-Cleanup

[B]2.1.3[/B]
-Settings - Default Settings
-Cleanup

[B]2.1.2 - Eden[/B]
-Channels - Cancelled channels removed
-Channels - Sources for j24/p24 updated to improve stability
-Settings - Disable GEOIP restricted channels
