@@ -25,8 +25,8 @@
     </category>
     <!--Misc-->
     <category label="30300">
-        <setting id="CLCA" label="30303" type="bool" default="false" />
-        <setting id="EVENT" label="30304" type="bool" default="false" />
+        <!-- <setting id="CLCA" label="30303" type="bool" default="false" /> -->
+        <!-- <setting id="EVENT" label="30304" type="bool" default="false" /> -->
     </category> /category>    
 </settings>
 
